--- a/FrontEnd/src/pages/Register/RegisterForm.css
+++ b/FrontEnd/src/pages/Register/RegisterForm.css
@@ -60,7 +60,15 @@
   border-radius: 4px;
   border: 1px solid #d9d9d9;
 }
+.ant-input-password .ant-input {
+  justify-content: center !important;
+  padding-right: 40px !important;
+  padding-bottom: 15px !important;
+}
 
+.ant-input-password .ant-input::placeholder {
+  justify-content: center !important;
+}
 .ant-input:hover,
 .ant-input-password:hover {
   border-color: #0078ff;
